--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Rick and Morty by masopego" />
-    <title>Rick and Morty</title>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Montserrat:ital,wght@0,400;0,700;1,900&display=swap" rel="stylesheet">
+    <title>Rick and Morty Search 🛸 🛸</title>
     <script
       src="https://kit.fontawesome.com/c75582e3c5.js"
       crossorigin="anonymous"
